<resources>
    <string name="app_name">Freezme</string>
</resources>
